client/app/thermo/components/heating-status/heating-status.component.scss
@import '../../../../styles/icons/mixins';
@import '../../../../styles/colors/variables';

.content-wrapper {
	display: flex;
    flex-flow: row;
    align-items: center;
    justify-content: center;
    width: 100%;
}

.thermo {
	height: calc(100% - 10px);
	display: flex;
	flex-flow: row;
	align-items: center;
	justify-content: center;
	position: relative;
}

.thermo-status--wrapper {
	position: relative;
	display: flex;
	flex-flow: column;
	align-items: center;
}

.thermo-status {
	display: flex;
	flex-flow: column;
	align-content: center;
	justify-content: center;
	line-height: 2rem;
	font-size: 1rem;
	background-color: #f7f7f7;
	background-image: linear-gradient(#f7f7f7, #e7e7e7);
	width: 144px;
	height: 144px;
	margin: 25px;
	position: relative;
	text-align: center;
	border-radius: 50%;
	box-shadow: 0px 3px 8px #aaa, inset 0px 2px 3px #fff;
	position: relative;
	transition: all 1s ease;
	font-size: 2rem;
	color: $white;

	&:before {
		content: '';
		position: absolute;
		width: calc(100% + 14px);
		height: calc(100% + 14px);
		padding: 18px;
		border-radius: 50%;
		left: -7px;
		top: -7px;
		box-shadow: 0px 0px 13px;
		transition: all 1s ease;
	}
}

.thermo-status--idle {
	color: $gray;
}

.thermo-status--heating {
	color: $olive;
	&:before {
		animation: pulsate-shadow 1s infinite;
	}
}

.thermo-status--failure {
	color: $red;
	&:before {
		animation: pulsate-shadow 1s infinite;
	}
}

.thermo-settings {
	position: absolute;
	top: 10px;
	right: 10px;

	button {
		border: 0;
		background: none;
		cursor: pointer;
		font-size: 1.2rem;
		
		@include icon('hamburger-menu-2');
	}

	a {
		cursor: pointer;
	}
}

.thermo-target--value {
	font-size: 2rem;

	i {
		font-size: 1.2rem;
		position: relative;
		top: -2px;
	}
}

.thermo-heating--duration {
	font-size: 1rem;
	color: $dark-gray;
}

.thermo-target--button {
	position: absolute;
	width: 25px;
    height: 25px;
	font-weight: bold;
    line-height: 20px;
	border-radius: 50%;
    text-align: center;
	opacity: 1;
	z-index: 1;
	font-size: 0.8rem;
	background-color: $white;
	padding: 3px;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-items: center;
    justify-content: center;
}

.thermo-target--increase {
	bottom: 30px;
    right: 30px;
	border: 2px solid $orange;
	color: $orange;
	@include icon('plus');
}

.thermo-target--decrease {
	bottom: 30px;
    left: 30px;
	border: 2px solid $teal;
	color: $teal;
	@include icon('minus');
}

.thermo-heating--power {
	text-align: center;
}

.thermo-heating--power-button {
	font-size: 1.5rem;
	cursor: pointer;
}

.thermo-heating--power-status {
	font-size: 1.5rem;
}

.thermo-heating--power-counter {
	font-size: 0.8rem;
	line-height: 1.7rem;
	vertical-align: text-bottom;
	position: absolute;
    top: -4px;
    left: 23px;
}

.thermo--inside,
.thermo--outside {
	font-size: 1.5rem;
	font-weight: bold;
}

.thermo-inside--icon,
.thermo-outside--weather {
	margin-bottom: 5px;
	text-align: center;
	color: $gray;
}
.thermo-inside--icon {
	font-size: 2.8rem;
	margin-top: 8px;
	margin-bottom: 6px;
}
.thermo-outside--weather {
	font-size: 3.1rem;
}




$switchTransition: .2s ease-out;

.switch {
	box-sizing: content-box;
	position: relative;
	display: inline-block;
	vertical-align: top;
	width: 56px;
	height: 20px;
	background-color: white;
	border-radius: 18px;
	box-shadow: inset 0 -1px white,
				inset 0 1px 1px rgba(black, .05);
	cursor: pointer;
	background: linear-gradient(to bottom, #eee, white 25px);
}

.switch-input {
	position: absolute;
	top: 0;
	left: 0;
	opacity: 0;
}

.switch-label {
	position: relative;
	display: block;
	height: inherit;
	font-size: 10px;
	text-transform: uppercase;
	background: #eceeef;
	border-radius: inherit;
	box-shadow: inset 0 1px 2px rgba(black, .12),
				inset 0 0 2px rgba(black, .15);
	transition: #{$switchTransition};
	transition-property: opacity background;

	&:before, &:after {
		position: absolute;
		top: 50%;
		margin-top: -.5em;
		line-height: 1;
		transition: inherit;
	}

	&:before {
		content: attr(data-off);
		right: 11px;
		color: #aaa;
		text-shadow: 0 1px rgba(white, .5);
	}

	&:after {
		content: attr(data-on);
		left: 11px;
		color: white;
		text-shadow: 0 1px rgba(black, .2);
		opacity: 0;
	}

	.switch-input:checked ~ & {
		background: $mint;
		box-shadow: inset 0 1px 2px rgba(black, .15),
			inset 0 0 3px rgba(black, .2);

		&:before { opacity: 0; }
		&:after { opacity: 1; }
	}
}

.switch-handle {
	position: absolute;
	top: 1px;
	left: 1px;
	width: 18px;
	height: 18px;
	background: white;
	border-radius: 10px;
	box-shadow: 1px 1px 5px rgba(black, .2);
	background: linear-gradient(to bottom, white 40%, #f0f0f0);
	transition: left #{$switchTransition};

	&:before {
		content: '';
		position: absolute;
		top: 50%;
		left: 50%;
		margin: -6px 0 0 -6px;
		width: 12px;
		height: 12px;
		background: #f9f9f9;
		border-radius: 6px;
		box-shadow: inset 0 1px rgba(black, .02);
		background: linear-gradient(to bottom, #eee, white);
	}

	.switch-input:checked ~ & {
		left: 37px;
		box-shadow: -1px 1px 5px rgba(black, .2);
	}
}

